2004-12-14  Jens A. Tkotz <jens@peino.de>  1.5-cvs-b308

	* Fix: statslinks for normal users are now optional

	* Fix: Added <span> around current page in navigator.
	
	* Change: Adjust layout for adminbox. Now nicer displayed in IE.

2004-12-13  Jens A. Tkotz <jens@peino.de>  1.5-cvs-b307

	* Change: removed unnecessary <span class="admin"> around admin text and commands.

	* Change: removed unneeded $adminbox["top"]

	* Change: removed permission check in stats.php. Now EVERYBODY can access it.

	* Stats changes:
	  - New: Added possibility in config setup to define public links to stats. (config version bump)
		 Links are displayed on mainpage.
		 Links are created with a function that can be placed by the user.
	  - New: Added Javascript in stats-wizard that generates statsURL for copy/paste
	  - Moved definitions and function into a separate files. (includes/stats/stats.inc.php)

2004-12-11  Jens A. Tkotz <jens@peino.de>  1.5-cvs-b306

	* New: Added support for exiftags. (RFE #810284)
	  - Added function getExifDisplayTool()
	  - Adjust function getExif()
	  - Adjust getItemCaptureDate()
	  - Added exiftags to confiwizard. (Bumped config version)

	 Note: So exiftags is only used in above cases ! (e.g. not for autorotation.)

	* Change: Tweaked optionals tools in config.

2004-12-10  Jens A. Tkotz <jens@peino.de>  1.5-cvs-b305

	* Fix: function getImVersion introduced in b300 was total b0rked. (Sorry.)

2004-12-10  Jens A. Tkotz <jens@peino.de>  1.5-cvs-b304

	* Change: Added target="_blank" to powered by link. (RFE #1020347)

	* New: Added login/logout link to view_photo. (RFE #582856 / #976764)

	* Fix: comments_addType was broken. (since b295)

	* Fix: Position of the add vote and add comment links was not used in stats.

2004-12-09  Jay Rossiter <cryptographite@users.sf.net>  1.5-cvs-b303

	* Remove debug code

2004-12-09  Christian Mohn <h0bbel@p0ggel.org>  1.5-cvs-b302

	* Fix: Typo in watermarking section of setup/config_data.inc
