@@ -1,3 +1,7 @@
+2004-12-14  Jay Rossiter <cryptographite@users.sf.net>  1.5-cvs-b309
+
+	* Change: Minor visual tweaks to stats and albums pages (removing/adding whitespace)
+
 2004-12-14  Jens A. Tkotz <jens@peino.de>  1.5-cvs-b308
 
 	* Fix: statslinks for normal users are now optional
